# bigint23

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
include/bigint23/: bigint.hpp
tests/: CMakeLists.txt  arithmetic_tests.cpp  assign_and_equals_tests.cpp  constexpr_tests.cpp  functions_tests.cpp
